# IA101-TD

./: README.md  setup.cfg  setup.py
data/: compas.csv  dep_48_clean.csv  dep_48_filtre.csv  dorade.csv  dorade_test.csv
ia01/: arbre.py  evaluation.py  kppv.py  majoritaire.py  metriques.py  utils.py
ia01.egg-info/: PKG-INFO  SOURCES.txt
td/: td00.py  td01.py  td02.py  td03.py  td04.py  td04_2.py  td05.py
