[metadata]
name = ia01
version = 1.0
author = <Philippe Xu>
author_email = philippe.xu@ensta-paris.fr
description = TD du cours CSC_3IA01_TA
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:

[options.packages.find]
include = ia01
